[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emerald_hws"
version = "0.0.2"
dependencies = [
  "boto3",
  "AWSIoTPythonSDK"
]
authors = [
  { name="Ross Williamson", email="ross@inertia.net.nz" },
]
description = "A package to manipulate and monitor Emerald Heat Pump Hot Water Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ross-w/emerald_hws_py"
"Bug Tracker" = "https://github.com/ross-w/emerald_hws_py/issues"
