[build-system]
requires = ["setuptools>=70.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emerald_hws"
dynamic = ["version"]
license = "MIT"
dependencies = [
    "boto3>=1.40.0,<2.0.0",
    "awsiotsdk>=1.24.0,<2.0.0",
    "requests>=2.25.0"
]
authors = [{ name = "Ross Williamson", email = "ross@inertia.net.nz" }]
description = "A package to manipulate and monitor Emerald Heat Pump Hot Water Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0,<1.0.0"
]

[tool.setuptools]
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools_scm]
# Use default version scheme for better compatibility

[project.urls]
"Homepage" = "https://github.com/ross-w/emerald_hws_py"
"Bug Tracker" = "https://github.com/ross-w/emerald_hws_py/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "build",
    "dist",
]
line-length = 88

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "F401",  # Unused imports (some imports are used in commented code)
]
